All functionality done according to the task description. No future big changes planned